Added additional sections
Added 2 sections to the home page.

--- a/Index.html
+++ b/Index.html
@@ -22,6 +22,32 @@
         </div>
     </div>
 
+    <div id="section-2">
+        <div class="spacing-2">
+            <h1> Cat Gangs and Criminals</h1>
+            <img class="cat-image default-img-prop" src="img/cat-cat.png" alt="cat image">
+            <p> Welcome to cats and criminals, here you will learn about our deadliest cats in the world. Don't be afraid for they are serving their 9 lives in cat prison. Below you will find images of our top 5 deadly kitties and their backstories.
+            </p>
+        </div>
+    </div>
+
+    <div>
+        <div class="cat-list">
+            <h2>1. The Cat Thief</h2>
+            <img class="cat-image default-img-prop" src="img/cat-thief.jpeg" alt="cat-thief">
+            <p> The cat thief is a notorious thief known for stealing cases of catnip and canned cat food. It is said he used the stolen items to give back to the less fortunate cats, but turns out the cats that were so called "less fortunate" were actually
+                in fact just paid cators (actors). The thief was then caught in placed in prison for faking being a hero when in reality he was using it for his own profit. What a shame. </p>
+        </div>
+
+        <div class="cat-list">
+            <h2>2. Cat Escape</h2>
+            <img class="cat-image default-img-prop" src="img/cat-escape.jpeg" alt="cat-escape">
+            <p> The cat escape is a foul cat. Known to have caused a riot and fight, he used the distraction as a way to fleed from prison without any scratches. He was recently caught on the side of the street stealing money from kittens who were working
+                a part time job. Luckly police were there to stop the assult just in time.
+            </p>
+        </div>
+
+    </div>
 
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
