--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
     <Img class="fireworks" src="img/fireworks.gif"> </Img>
 
     <div id="section-1">
-        <div class="gangBlock spacing">Gang Gang</div>
+        <div value="title" class="gangBlock spacing">Gang Gang</div>
         <div class="spacing">
             So anyways I started blastin.
         </div>
